--- a/MPfm/MPfm.Android/Resources/Layout/SyncMenuCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncMenuCell.axml
@@ -14,6 +14,7 @@
     android:id="@+id/syncMenuCell_index"
     android:layout_width="22dp"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="8dp"
     android:textColor="#333333"
     android:textSize="14dp" />
   <TextView
