--- a/MPfm/MPfm.Android/Resources/Layout/SyncDownload.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/SyncDownload.axml
@@ -27,16 +27,14 @@
       <TextView
         android:id="@+id/syncDownload_lblTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
+        android:layout_height="wrap_content"        
         android:text="Downloading files..."
         android:textColor="#FFFFFF"
         android:textSize="22dp" />
       <TextView
         android:id="@+id/syncDownload_lblFileName"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="6dp"
+        android:layout_height="wrap_content"        
         android:text="01 - Test.mp3"
         android:textColor="#CCCCCC"
         android:textSize="16dp" />
@@ -107,6 +105,12 @@
         android:textColor="#AAAAAA"
         android:textSize="12dp" />
     </LinearLayout>
+  </LinearLayout>
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="12dp">    
     <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
