--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -12,7 +12,7 @@
       android:layout_height="wrap_content">
     <TextView
         android:id="@+id/player_lblPosition"
-        android:text="0:00.000"        
+        android:text="0:00.000"
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
         android:max="100" />
     <TextView
         android:id="@+id/player_lblLength"
-        android:text="0.00:000"        
+        android:text="0.00:000"
         android:textColor="#ffffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -53,37 +53,62 @@
       android:layout_height="fill_parent"
       android:gravity="center"
       android:scaleType="fitStart"
-      android:adjustViewBounds="true"      
+      android:adjustViewBounds="true"
       android:background="#00000000" />
     <android.support.v4.view.ViewPager
         android:id="@+id/player_pager"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"        
-        android:background="#AA000000">
+        android:layout_height="fill_parent"
+        android:background="#00000000">
     </android.support.v4.view.ViewPager>
   </FrameLayout>
   <LinearLayout
       android:id="@+id/player_layoutButtons"
       android:orientation="horizontal"
+      android:gravity="center"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content">
-    <Button
-        android:id="@+id/player_btnPrevious"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Previous"
-        android:padding="20dp" />
-    <Button
-        android:id="@+id/player_btnPlayPause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pause"
-        android:padding="20dp" />
-    <Button
-        android:id="@+id/player_btnNext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next"
-        android:padding="20dp" />
+      android:layout_height="60dp">
+    <ImageButton
+      android:id="@+id/player_btnPrevious"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_previous"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/player_btnPlayPause"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_pause"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/player_btnNext"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_next"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/player_btnPlaylist"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_playlist"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/player_btnRepeat"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_repeat"
+      android:padding="20dp" />
+    <ImageButton
+      android:id="@+id/player_btnShuffle"
+      android:layout_width="60dp"
+      android:layout_height="44dp"
+      android:background="@android:color/transparent"
+      android:src="@drawable/player_shuffle"
+      android:padding="20dp" />
   </LinearLayout>
 </LinearLayout>
