--- a/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:orientation="vertical"  
+  android:gravity="bottom">
+  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="#AA000000"
     android:gravity="bottom">
   <TextView
     android:id="@+id/playerMetadata_lblArtistName"
-    android:text=""
-    android:textSize="20dp"
-    android:background="#00000000"
-    android:textColor="#ffffffff"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:text=""
+    android:textSize="22dp"
+    android:textStyle="bold"
+    android:textColor="#ffffffff"
     android:gravity="center_horizontal"
-    android:padding="6dip" />
+    android:padding="2dp" />
   <TextView
-      android:id="@+id/playerMetadata_lblAlbumTitle"
-      android:text=""
-      android:background="#00000000"
-      android:textColor="#ffffffff"
-      android:textSize="18dp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center_horizontal"
-      android:padding="6dip" />
+    android:id="@+id/playerMetadata_lblAlbumTitle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text=""
+    android:textColor="#ffffffff"
+    android:textSize="18dp"
+    android:gravity="center_horizontal"
+    android:padding="2dp" />
   <TextView
-      android:id="@+id/playerMetadata_lblSongTitle"
-      android:text=""
-      android:textSize="14dp"
-      android:background="#00000000"
-      android:textColor="#ffffffff"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:gravity="center_horizontal"
-      android:padding="6dip" />
+    android:id="@+id/playerMetadata_lblSongTitle"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text=""
+    android:textSize="14dp"
+    android:textColor="#ffffffff"
+    android:gravity="center_horizontal"
+    android:padding="2dp" />
+  </LinearLayout>
 </LinearLayout>
