--- a/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/PlayerMetadata.axml
@@ -7,6 +7,7 @@
   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="8dp"
     android:orientation="vertical"
     android:background="#AA000000"
     android:gravity="bottom">
