Android: Several layout bug fixes in Sync screens. Added layout for SyncManualConnect dialog. Moved limit progress timer from SyncDownloadActivity to SyncDownloadPresenter to re-use on iOS.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Sync.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Sync.axml
@@ -11,6 +11,7 @@
     android:layout_height="wrap_content"
     android:padding="6dp"
     android:text="My IP address is:"
+    android:textSize="14dp"
     android:textColor="#CCCCCC" />
   <LinearLayout
     android:layout_width="fill_parent"
@@ -30,6 +31,7 @@
       android:layout_height="wrap_content"     
       android:layout_marginLeft="8dp"      
       android:text="Refreshing devices..."
+      android:textSize="16dp"
       android:textColor="#FFFFFF" />
   </LinearLayout>
   <ListView
