--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -46,7 +46,7 @@
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
-      android:background="#00000000">
+      android:background="#000000">
     <ImageView
       android:id="@+id/player_imageViewAlbumArt"
       android:layout_width="fill_parent"
@@ -54,7 +54,7 @@
       android:gravity="center"
       android:scaleType="fitStart"
       android:adjustViewBounds="true"
-      android:background="#00000000" />
+      android:background="#000000" />
     <android.support.v4.view.ViewPager
         android:id="@+id/player_pager"
         android:layout_width="fill_parent"
