--- a/MPfm/MPfm.Android/Resources/Layout/WidgetPlayerLoading.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/WidgetPlayerLoading.axml
@@ -1,16 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/widgetPlayerLoading"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#36454F">
+  android:id="@+id/widgetPlayerLoading"
+  android:layout_width="fill_parent"
+  android:layout_height="fill_parent"
+  android:orientation="vertical"
+  android:gravity="center"
+  android:background="#36454F">
   <TextView
-      android:id="@+id/widgetPlayerLoading_Message"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="12dip"
-      android:padding="10dip"
-      android:gravity="center"
-      android:text="Loading..." />
+    android:id="@+id/widgetPlayerLoading_lblMessage"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"      
+    android:padding="10dip"
+    android:gravity="center"
+    android:text="Loading..."
+    android:textSize="14dp"
+    android:textColor="#FFFFFF" />
 </LinearLayout>
