Android: Fixed more memory leaks related to bitmaps. There might be other leaks but the new code seems to release most of the memory. Once again, I had to reimplement the way the ViewPager in the MainActivity handles the MobileLibraryBrowser fragments. This time the fragments are never actually replaced; the fragment is refreshed through the presenter instead. This fixes also the empty fragments often shown when changing fragments (clicking on an item or using the Back button). The ViewPager is one of the most buggiest control I've ever seen. Android never ceases to amaze me, every time! The iOS version will keep spawning new views as needed.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowser.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/MobileLibraryBrowser.axml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
+  android:background="@color/background"
   android:orientation="horizontal">
   <LinearLayout
     android:id="@+id/mobileLibraryBrowser_layoutAlbum"
@@ -51,8 +52,8 @@
   </LinearLayout>
   <ListView
     android:id="@+id/mobileLibraryBrowser_listView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_below="@+id/mobileLibraryBrowser_layoutAlbum"
     android:background="#FFFFFF"
     android:cacheColorHint="#333333"
@@ -61,8 +62,8 @@
     android:listSelector="#CCCCCC" />
   <GridView
     android:id="@+id/mobileLibraryBrowser_gridView"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@color/background"
     android:columnWidth="100dp"
     android:numColumns="2"
