Android: Adjusted bitmap cache sizes depending on screen size, layout bug fixes in MobileLibraryBrowser, and now using SquareImageView when displaying album art throughout the application.
Related to issue #406.

--- a/MPfm/MPfm.Android/Resources/Layout/Main.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Main.axml
@@ -13,10 +13,11 @@
       android:background="#36454F"
       android:gravity="center_vertical"
       android:layout_alignParentBottom="true">
-    <ImageView
+    <org.sessionsapp.android.SquareImageView
       android:id="@+id/main_miniplayer_imageAlbum"
       android:layout_width="100dp"
       android:layout_height="100dp"
+      android:scaleType="centerCrop"
       android:background="@android:color/transparent" />
     <LinearLayout
       android:layout_width="0dp"
