--- a/MPfm/MPfm.Android/Resources/Layout/Player.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/Player.axml
@@ -47,12 +47,12 @@
       android:layout_height="0dp"
       android:layout_weight="1"
       android:background="#000000">
-    <ImageView
+    <org.sessionsapp.android.SquareImageView
       android:id="@+id/player_imageViewAlbumArt"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:gravity="center"
-      android:scaleType="fitStart"
+      android:scaleType="centerCrop"
       android:adjustViewBounds="true"
       android:background="#000000" />
     <android.support.v4.view.ViewPager
