--- a/MPfm/MPfm.Android/Resources/Layout/AlbumCell.axml
+++ b/MPfm/MPfm.Android/Resources/Layout/AlbumCell.axml
@@ -3,9 +3,7 @@
   android:id="@+id/albumCell_layout"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"   
-  android:background="@color/background"
-  android:gravity="center"
-  android:orientation="vertical">
+  android:background="@color/background">
   <org.sessionsapp.android.SquareImageView
     android:id="@+id/albumCell_image"
     android:layout_width="fill_parent"
@@ -17,13 +15,14 @@
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="#66000000"    
-    android:gravity="center"
+    android:gravity="center"   
     android:orientation="vertical">
     <TextView
       android:id="@+id/albumCell_artistName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:padding="2dp"
+      android:paddingLeft="4dp"
+      android:paddingRight="4dp"
       android:gravity="center_vertical"
       android:textStyle="bold"
       android:textColor="#FFFFFF"
@@ -34,8 +33,9 @@
       android:id="@+id/albumCell_albumTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"      
+      android:paddingLeft="4dp"
+      android:paddingRight="4dp"
       android:gravity="center_vertical"
-      android:padding="2dp"
       android:textColor="#FFFFFF"
       android:textSize="12dp"
       android:ellipsize="end"
